# toy-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: pyproject.toml
backend/core/: settings.py
